@@ -24,6 +24,7 @@
 2004-05-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> ltmain.sh: Fix to allow exe wrapper to work under MinGW.
   <LI> wand/magick_compat.c (QueryMagickColor): Fixed DLL export.
   <LI> wand/magick_wand.c: Fixed some DLL exports (MagickExport-&gt;WandExport).
 
